# Qv2rayBase

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-android.yml  build-desktop.yml  build-shared-lib.yml  build-sharedlib-android.yml  build-sharedlib-desktop.yml  build-sharedlib-wasm.yml  build-wasm.yml
cmake/: Deployment.cmake  Qv2rayBase.cmake.in  Windows.cmake  libuvw.cmake
core/: CoreUtils.cpp  Qv2rayBaseApplication.cpp
core/connection/: ConnectionIO.cpp  Serialization.cpp
core/connection/generation/: filters.cpp  inbounds.cpp  misc.cpp  outbounds.cpp  routing.cpp
core/connection/serialization/: ss.cpp  ssd.cpp  vless.cpp  vmess.cpp  vmess_new.cpp
core/handler/: ConfigHandler.cpp  KernelInstanceHandler.cpp  RouteHandler.cpp
core/kernel/: APIBackend.hpp  V2RayKernelInteractions.cpp  V2RayKernelInteractions.hpp
core/settings/: SettingsBackend.cpp  SettingsBackend.hpp  SettingsUpgrade.cpp
include/Qv2rayBase/: ConfigHandler.hpp  ConnectionIO.hpp  CoreUtils.hpp  Generation.hpp  KernelInstanceHandler.hpp  PluginAPIHost.hpp  PluginManagerCore.hpp  Qv2rayBase.hpp  Qv2rayBaseApplication.hpp  Qv2rayBaseFeatures.hpp  Qv2rayBaseLibrary.hpp  Qv2rayBase_export.h  Qv2rayLog.hpp  QvHelpers.hpp  RouteHandler.hpp  Serialization.hpp  StorageProvider.hpp
include/Qv2rayBase/Common/: HTTPRequestHelper.hpp  ProfileHelper.hpp  ProfileHelpers.hpp  Settings.hpp  Utils.hpp
include/Qv2rayBase/Interfaces/: IConfigurationGenerator.hpp  IStorageProvider.hpp  IUserInteractionInterface.hpp
include/Qv2rayBase/Models/: Settings.hpp
include/Qv2rayBase/Plugin/: LatencyTestHost.hpp  PluginAPIHost.hpp  PluginManagerCore.hpp
include/Qv2rayBase/Profile/: Generator.hpp  KernelManager.hpp  ProfileManager.hpp  Serialization.hpp
include/Qv2rayBase/models/: CoreObjectModels.hpp  QvComplexConfigModels.hpp  QvCoreSettings.hpp  QvRuntimeConfig.hpp  QvSettingsObject.hpp
include/Qv2rayBase/private/: Qv2rayBaseLibrary_p.hpp
include/Qv2rayBase/private/Common/: SettingsUpgrade_p.hpp
include/Qv2rayBase/private/Interfaces/: BaseConfigurationGenerator_p.hpp  BaseStorageProvider_p.hpp
include/Qv2rayBase/private/Plugin/: LatencyTestHost_p.hpp  LatencyTestThread_p.hpp  PluginAPIHost_p.hpp  PluginManagerCore_p.hpp
include/Qv2rayBase/private/Profile/: KernelManager_p.hpp  ProfileManager_p.hpp
plugins/: PluginAPIHost.cpp  PluginManagerCore.cpp
plugins/LatencyTestPlugin/: BuiltinLatencyTesterPlugin.cpp  BuiltinLatencyTesterPlugin.hpp  CMakeLists.txt
plugins/LatencyTestPlugin/latency/: DNSBase.hpp  ICMPLatencyTester.cpp  ICMPLatencyTester.hpp  TCPLatencyTester.cpp  TCPLatencyTester.hpp
plugins/V2RayCorePlugin/: BuiltinV2RayCorePlugin.cpp  BuiltinV2RayCorePlugin.hpp  CMakeLists.txt
src/: Qv2rayBaseLibrary.cpp
src/Base/: SettingsUpgrade.cpp
src/Common/: HTTPRequestHelper.cpp  ProfileHelpers.cpp
src/Plugin/: LatencyTestHost.cpp  PluginAPIHost.cpp  PluginManagerCore.cpp
src/Profile/: Generator.cpp  KernelManager.cpp  ProfileManager.cpp  Serialization.cpp
src/Utils/: HTTPRequestHelper.cpp  HTTPRequestHelper.hpp  ProfileHelpers.cpp
src/private/: BaseConfigurationGenerator.cpp  BaseConfigurationGenerator.hpp  BaseStorageProvider.cpp  BaseStorageProvider.hpp  LatencyTestThread.cpp  LatencyTestThread.hpp  Qv2rayBaseLibrary_p.cpp
src/private/Common/: SettingsUpgrade_p.cpp
src/private/Interfaces/: BaseConfigurationGenerator_p.cpp  BaseStorageProvider_p.cpp
src/private/Plugin/: LatencyTestHost_p.cpp  LatencyTestThread_p.cpp  PluginAPIHost_p.cpp  PluginManagerCore_p.cpp
src/private/Profile/: KernelManager_p.cpp  ProfileManager_p.cpp
src/private/StaticLatencyTestPlugin/: BuiltinLatencyTesterPlugin.cpp  BuiltinLatencyTesterPlugin.hpp  CMakeLists.txt
src/private/StaticLatencyTestPlugin/latency/: DNSBase.hpp  ICMPLatencyTester.cpp  ICMPLatencyTester.hpp  TCPLatencyTester.cpp  TCPLatencyTester.hpp
tests/: CMakeLists.txt  TestCommon.hpp
tests/Plugin/: tst_PluginLoader.cpp  tst_StaticPlugin.cpp
utils/: HTTPRequestHelper.cpp  QvHelpers.cpp
